5.kubernete/breakdown-type-dpl/fullstack/fullstack-demo-chart/templates/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  clusterIP: None   # 👈 This makes it headless
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
