5.kubernete/breakdown-type-dpl/fullstack/fullstack-demo-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
spec:
  ingressClassName: nginx 
  rules:
    - host: fullstack.anajak-khmer.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          # - path: /api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend
          #       port:
          #         number: 8080
